[package]
name = "udp_netmsg"
version = "0.1.3"
authors = ["Joey Vagedes <Joey.Vagedes@gmail.com>"]
edition = "2018"
description = "A low cost abstraction for sending and receiving udp datagrams. Gives ability to send and receive datagrams defined by custom structs in a simple way"
license = "MIT"
repository = "https://github.com/Javagedes/udp_netmsg"
homepage = "https://github.com/Javagedes/udp_netmsg"
readme = "README.md"
categories = ["encoding", "parsing","Communication Protocol", "User Datagram Protocol"]
keywords = ["byte", "UDP", "big-endian", "Network Message", "Abstraction"]

[dependencies]
byteorder = "1.3.1"
downcast-rs = "1.0.4"