[package]
name = "udp_netmsg"
version = "0.1.8"
authors = ["Joey Vagedes <Joey.Vagedes@gmail.com>"]
edition = "2018"
description = "A low cost abstraction for sending and receiving udp datagrams. Gives ability to send and receive datagrams defined by custom structs in a simple way"
license = "MIT"
repository = "https://github.com/Javagedes/udp_netmsg"
homepage = "https://github.com/Javagedes/udp_netmsg"
readme = "README.md"
categories = ["encoding", "parsing","encoding", "network-programming"]
keywords = ["byte", "udp", "big-endian", "network-message", "abstraction"]

[dependencies]
byteorder = "1.3.1"
downcast-rs = "1.0.4"