[package]
name = "udp_netmsg"
version = "0.2.0"
authors = ["Joey Vagedes <Joey.Vagedes@gmail.com>"]
edition = "2018"
description = "A low cost abstraction for sending and receiving udp datagrams. Gives ability to send and receive datagrams defined by custom structs in a simple way"
license = "MIT"
repository = "https://github.com/Javagedes/udp_netmsg"
homepage = "https://github.com/Javagedes/udp_netmsg"
readme = "README.md"
categories = ["encoding", "parsing", "encoding", "network-programming", "udp"]
keywords = ["byte", "udp", "big-endian", "network-message", "abstraction"]

[dependencies]
byteorder = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
serde_yaml = "0.8"